--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -152,7 +152,7 @@
         {
           "name": "url",
           "tip": [
-            "当前值: \"{{ $PSCompletions.config.url }}\"",
+            "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.url) }}",
             "设置远程补全数据的 url 地址。",
             "默认值为 \"\"，表示根据语言自动选择仓库(Github/Gitee)。",
             "{{ $info.config.url.example }}"
@@ -319,7 +319,7 @@
             {
               "name": "PSCompletions",
               "tip": [
-                "设置为 PSCompletions (默认值)。"
+                "设置为 PSCompletions (默认值)"
               ]
             }
           ]
@@ -360,7 +360,7 @@
                 {
                   "name": "~",
                   "tip": [
-                    "设置为 ~ (默认值)。"
+                    "设置为 ~ (默认值)"
                   ]
                 },
                 {
@@ -383,7 +383,7 @@
                 {
                   "name": "?",
                   "tip": [
-                    "设置为 ? (默认值)。"
+                    "设置为 ? (默认值)"
                   ]
                 },
                 {
@@ -406,7 +406,7 @@
                 {
                   "name": "!",
                   "tip": [
-                    "设置为 ! (默认值)。"
+                    "设置为 ! (默认值)"
                   ]
                 },
                 {
@@ -605,7 +605,7 @@
                 {
                   "name": "horizontal",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.horizontal }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.horizontal) }}",
                     "边框的横线。"
                   ],
                   "next": [
@@ -638,7 +638,7 @@
                 {
                   "name": "vertical",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.vertical }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.vertical) }}",
                     "边框的竖线。"
                   ],
                   "next": [
@@ -671,7 +671,7 @@
                 {
                   "name": "top_left",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.top_left }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.top_left) }}",
                     "边框的左上角。"
                   ],
                   "next": [
@@ -707,7 +707,7 @@
                 {
                   "name": "bottom_left",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.bottom_left }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.bottom_left) }}",
                     "边框的左下角。"
                   ],
                   "next": [
@@ -743,7 +743,7 @@
                 {
                   "name": "top_right",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.top_right }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.top_right) }}",
                     "边框的右上角。"
                   ],
                   "next": [
@@ -779,7 +779,7 @@
                 {
                   "name": "bottom_right",
                   "tip": [
-                    "当前值: \"{{ $PSCompletions.config.bottom_right }}\"",
+                    "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.bottom_right) }}",
                     "边框的右下角。"
                   ],
                   "next": [
@@ -826,14 +826,14 @@
             {
               "name": "trigger_key",
               "tip": [
-                "当前值: \"{{ $PSCompletions.config.trigger_key }}\" (默认值: \"Tab\")",
+                "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.trigger_key) }} (默认值: \"Tab\")",
                 "设置触发补全的按键。"
               ],
               "next": [
                 {
                   "name": "\"Tab\"",
                   "tip": [
-                    "设置为 Tab (默认值)。"
+                    "设置为 Tab (默认值)"
                   ]
                 },
                 {
@@ -1543,7 +1543,7 @@
             {
               "name": "filter_symbol",
               "tip": [
-                "当前值: \"{{ $PSCompletions.config.filter_symbol }}\" (默认值: \"[]\")",
+                "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.filter_symbol) }} (默认值: \"[]\")",
                 "设置顶部边框上的过滤区域, 左侧和右侧的符号。",
                 "设置此配置项需要两个字符。"
               ],
@@ -1551,7 +1551,7 @@
                 {
                   "name": "[]",
                   "tip": [
-                    "设置为 \"[]\" (默认值)。"
+                    "设置为 \"[]\" (默认值)"
                   ]
                 }
               ]
@@ -1559,14 +1559,14 @@
             {
               "name": "status_symbol",
               "tip": [
-                "当前值: \"{{ $PSCompletions.config.status_symbol }}\" (默认值: \"/\")",
+                "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.status_symbol) }} (默认值: \"/\")",
                 "设置底部边框上的补全个数显示区域, 当前补全数以及总补全数之间的间隔符。"
               ],
               "next": [
                 {
                   "name": "/",
                   "tip": [
-                    "设置为 \"/\" (默认值)。"
+                    "设置为 \"/\" (默认值)"
                   ]
                 }
               ]
@@ -1574,7 +1574,7 @@
             {
               "name": "between_item_and_symbol",
               "tip": [
-                "当前值: \"{{ $PSCompletions.config.between_item_and_symbol }}\" (默认值: \" \")",
+                "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.between_item_and_symbol) }} (默认值: \" \")",
                 "设置当补全项后面有符号时, 补全项与符号之间的间隔符。"
               ],
               "next": [
@@ -1598,7 +1598,7 @@
                 {
                   "name": "0",
                   "tip": [
-                    "设置为 0 (默认值)。"
+                    "设置为 0 (默认值)"
                   ]
                 },
                 {
@@ -1619,7 +1619,7 @@
                 {
                   "name": "0",
                   "tip": [
-                    "设置为 0 (默认值)。"
+                    "设置为 0 (默认值)"
                   ]
                 },
                 {
@@ -1672,7 +1672,7 @@
                 {
                   "name": "1",
                   "tip": [
-                    "设置为 1 (默认值)。"
+                    "设置为 1 (默认值)"
                   ]
                 }
               ]
@@ -1892,9 +1892,9 @@
               "name": "enable_path_with_trailing_separator",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_path_with_trailing_separator }} (默认值: 1)",
-                "设置路径完成是否带有末尾的分隔符。",
-                "有: C:\\Users\\abgox{{ $PSCompletions.separator }}",
-                "无: C:\\Users\\abgox"
+                "设置路径补全是否带有末尾的分隔符。",
+                "C:\\Users\\abgox{{ $PSCompletions.separator }}     (有)",
+                "C:\\Users\\abgox      (无)"
               ],
               "next": [
                 {
@@ -1968,7 +1968,7 @@
             {
               "name": "completion_suffix",
               "tip": [
-                "当前值: \"{{ $PSCompletions.config.completion_suffix }}\" (默认值: \" \")",
+                "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.completion_suffix) }} (默认值: \" \")",
                 "设置补全后缀，当应用补全后，会自动补充这个后缀。",
                 "默认为一个空格，用于简化不必要的空格按键。"
               ],
@@ -1976,7 +1976,7 @@
                 {
                   "name": "\" \"",
                   "tip": [
-                    "设置为 \" \" (默认值)。"
+                    "设置为 \" \" (默认值)"
                   ]
                 }
               ]
@@ -1992,7 +1992,7 @@
                 {
                   "name": "0",
                   "tip": [
-                    "设置为 0 (默认值)。",
+                    "设置为 0 (默认值)",
                     "它表示无限制，不管补全项有多少个，都会直接获取。"
                   ]
                 }
@@ -2290,8 +2290,8 @@
         "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
         "   '';",
-        "   \"<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:\";",
-        "   '默认值: ' + $PSCompletions.quote_if_only_whitespace($_.value);",
+        "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
+        "   '默认值: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
         "   if ($v -ne $null){ '当前值: <@Magenta>' + $v + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
@@ -2350,8 +2350,8 @@
         "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
         "   '';",
-        "   \"<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:\";",
-        "   '默认值: ' + $PSCompletions.quote_if_only_whitespace($_.value);",
+        "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
+        "   '默认值: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
         "   if ($v -ne $null){ '当前值: <@Magenta>' + $v + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
@@ -2472,7 +2472,7 @@
       ],
       "done": [
         "<@Green>PSCompletions 的配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}\n",
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.wrap_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.wrap_whitespace($new_value) }}\n",
         "<@Yellow>可能需要重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效"
       ],
       "err": {
@@ -2536,7 +2536,7 @@
       ],
       "done": [
         "<@Magenta>{{ $completion }}<@Green> 的特殊配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.wrap_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.wrap_whitespace($new_value) }}"
       ],
       "err": {
         "min": [
@@ -2582,7 +2582,7 @@
       ],
       "done": [
         "<@Green>配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.wrap_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.wrap_whitespace($new_value) }}"
       ],
       "symbol": {
         "example": [
@@ -2666,7 +2666,7 @@
         "};",
         "$change_list | ForEach-Object {",
         "  $c = if($_.cmd){ \"<@Magenta>$($_.cmd)<@Blue>($($_.item))\" }else{ \"<@Blue>$($_.item)\" };",
-        "  $out += \"$($c): <@Magenta>$($PSCompletions.quote_if_only_whitespace($_.old_value))<@Blue> => <@Magenta>$($PSCompletions.quote_if_only_whitespace($_.new_value))<@Blue>\";",
+        "  $out += \"$($c): <@Magenta>$($PSCompletions.wrap_whitespace($_.old_value))<@Blue> => <@Magenta>$($PSCompletions.wrap_whitespace($_.new_value))<@Blue>\";",
         "};",
         "($out + $end) -join \"`n\";",
         "}}"
