feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -1095,21 +1095,24 @@
               "tip": [
                 "U: remove [OPTIONS] <REMOTE>",
                 "Remove a Git remote and forget its bookmarks"
-              ]
+              ],
+              "next": []
             },
             {
               "name": "rename",
               "tip": [
                 "U: rename [OPTIONS] <OLD> <NEW>",
                 "Rename a Git remote"
-              ]
+              ],
+              "next": []
             },
             {
               "name": "set-url",
               "tip": [
                 "U: set-url [OPTIONS] <REMOTE> <URL>",
                 "Set the URL of a Git remote"
-              ]
+              ],
+              "next": []
             }
           ]
         },
