--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -1095,21 +1095,24 @@
               "tip": [
                 "U: remove [OPTIONS] <REMOTE>",
                 "移除指定的 Git 远程仓库并忘记其书签"
-              ]
+              ],
+              "next": []
             },
             {
               "name": "rename",
               "tip": [
                 "U: rename [OPTIONS] <OLD> <NEW>",
                 "重命名 Git 远程仓库"
-              ]
+              ],
+              "next": []
             },
             {
               "name": "set-url",
               "tip": [
                 "U: set-url [OPTIONS] <REMOTE> <URL>",
                 "设置 Git 远程仓库的 URL"
-              ]
+              ],
+              "next": []
             }
           ]
         },
