feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2299,7 +2299,7 @@
         "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
         "   'Default Value: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
-        "   if ($v -ne $null){ 'Current Value: <@Magenta>' + $v + '<@Blue>'; }",
+        "   if ($v -ne $null){ 'Current Value: <@Magenta>' + $PSCompletions.wrap_whitespace($v) + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
         " };",
         " $config_list -join \"`n\";",
@@ -2359,7 +2359,7 @@
         "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
         "   'Default Value: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
-        "   if ($v -ne $null){ 'Current Value: <@Magenta>' + $v + '<@Blue>'; }",
+        "   if ($v -ne $null){ 'Current Value: <@Magenta>' + $PSCompletions.wrap_whitespace($v) + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
         " };",
         " $config_list -join \"`n\";",
