--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2293,7 +2293,7 @@
         "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
         "   '默认值: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
-        "   if ($v -ne $null){ '当前值: <@Magenta>' + $v + '<@Blue>'; }",
+        "   if ($v -ne $null){ '当前值: <@Magenta>' + $PSCompletions.wrap_whitespace($v) + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
         " };",
         " $config_list -join \"`n\";",
@@ -2353,7 +2353,7 @@
         "   \"<@Magenta>$($PSCompletions.wrap_whitespace($_.name))<@Blue>:\";",
         "   '默认值: ' + $PSCompletions.wrap_whitespace($_.value);",
         "   $v = $PSCompletions.config.comp_config[$completion].($_.name);",
-        "   if ($v -ne $null){ '当前值: <@Magenta>' + $v + '<@Blue>'; }",
+        "   if ($v -ne $null){ '当前值: <@Magenta>' + $PSCompletions.wrap_whitespace($v) + '<@Blue>'; }",
         "   $PSCompletions.replace_content($_.tip, \"`n\")",
         " };",
         " $config_list -join \"`n\";",
