refactor(module): limit the range of values to avoid unexpected values

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2640,6 +2640,7 @@
         ],
         "err": {
           "v_ge": "<@Red>It should be an integer number greater than or equal to<@Magenta>{{ $min }}.",
+          "v_ge_le": "<@Red>It should be an integer number greater than or equal to <@Magenta>{{ $min }}<@Red> and less than or equal to <@Magenta>{{ $max }}<@Red>.",
           "v_1_or_0": "<@Red>It should be the number <@Magenta>1<@Red> or <@Magenta>0<@Red>, which means enabled or disabled.",
           "trigger_key": "<@Magenta>{{ $arg[3] }}<@Red> isn't a valid trigger key.",
           "completion_suffix": "<@Magenta>{{ $arg[2] }}<@Red> can only be one or more spaces."
