--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1606,6 +1606,15 @@
                 },
                 {
                   "name": "2"
+                },
+                {
+                  "name": "3"
+                },
+                {
+                  "name": "4"
+                },
+                {
+                  "name": "5"
                 }
               ]
             },
@@ -1627,6 +1636,15 @@
                 },
                 {
                   "name": "2"
+                },
+                {
+                  "name": "3"
+                },
+                {
+                  "name": "4"
+                },
+                {
+                  "name": "5"
                 }
               ]
             },
@@ -2634,6 +2652,7 @@
         ],
         "err": {
           "v_ge": "<@Red>应该是一个大于等于 <@Magenta>{{ $min }}<@Red> 的整数数字",
+          "v_ge_le": "<@Red>应该是一个大于等于 <@Magenta>{{ $min }}<@Red> 且小于等于 <@Magenta>{{ $max }}<@Red> 的整数数字",
           "v_1_or_0": "<@Red>应该是数字 <@Magenta>1<@Red> 或 <@Magenta>0<@Red>, 表示启用或禁用",
           "trigger_key": "<@Magenta>{{ $arg[3] }}<@Red> 不是一个可用的按键映射，修改失败",
           "completion_suffix": "<@Magenta>{{ $arg[2] }}<@Red> 只能是一个或多个空格"
