fix(module): handle wildcard characters

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2186,6 +2186,9 @@
       "deny_change_menu_line_style": [
         "<@Red>In Windows PowerShell 5.1, due to its rendering issues, the border line style of the completion menu cannot be modified.\n",
         "It is recommended to use PowerShell (pwsh) as it does not have such restrictions."
+      ],
+      "has_wildcard": [
+        "<@Red>It contains wildcard characters."
       ]
     },
     "module": {
