--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2198,6 +2198,9 @@
       "deny_change_menu_line_style": [
         "<@Red>在 Windows PowerShell 5.1 中，由于它的渲染问题，不能修改补全菜单的边框线条样式。\n",
         "建议使用 PowerShell(pwsh)，它没有这样的限制。"
+      ],
+      "has_wildcard": [
+        "<@Red>它包含了通配符"
       ]
     },
     "module": {
