refactor(module): simplify list display and remove related method

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2278,13 +2278,11 @@
     ],
     "no_completion": "<@Red>你还未添加 <@Magenta>{{ $completion }}<@Red> 补全",
     "confirm_cancel": "<@Green>操作取消!",
-    "less_tip": "<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下 <@Magenta>其他任意键<@Cyan> 退出! (剩余 <@Magenta>{{ $lines }} <@Cyan>行)",
     "min_area": "显示区域宽度或高度太小!",
     "example_color": "<@Cyan>",
     "list": {
-      "add_symbol": "🔴",
-      "added_symbol": "🟢",
-      "symbol_tip": "\n<@Yellow>🟢 : 补全已经添加   🔴 : 补全还未添加",
+      "add": "",
+      "added": "已添加",
       "example": [
         "E: psc list              --- 显示本地已安装的补全列表\n",
         "   psc list --remote     --- 显示远程补全列表"
