--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2266,13 +2266,11 @@
     ],
     "no_completion": "<@Red>You haven't added <@Magenta>{{ $completion }}<@Red> yet.",
     "confirm_cancel": "<@Green>The operation has been canceled.",
-    "less_tip": "<@Cyan>Press <@Magenta>Enter<@Cyan> key to view more, or any <@Magenta>other key<@Cyan> to exit! (<@Magenta>{{ $lines }}<@Cyan> lines remaining)",
     "min_area": "The area is too small!",
     "example_color": "<@Cyan>",
     "list": {
-      "add_symbol": "🔴",
-      "added_symbol": "🟢",
-      "symbol_tip": "\n<@Yellow>🟢 : You have added it.   🔴 : You haven't added it yet.",
+      "add": "",
+      "added": "Added",
       "example": [
         "E: psc list              --- Display a list of locally installed completions\n",
         "   psc list --remote     --- Display remote completions list"
