--- a/completions/mise/language/zh-CN.json
+++ b/completions/mise/language/zh-CN.json
@@ -1,8 +1,8 @@
 {
   "meta": {
-    "url": "https://github.com/jdx/mise",
+    "url": "https://mise.jdx.dev/",
     "description": [
-      "mise is a task runner and dev tools manager for any language."
+      "mise - Polyglot tool version manager, env vars manager and task runner"
     ]
   },
   "root": [
@@ -15,7 +15,7 @@
     {
       "name": "alias",
       "alias": [
-        "a"
+        "tool-alias"
       ],
       "tip": [
         "Manage version aliases"
@@ -75,7 +75,7 @@
     {
       "name": "en",
       "tip": [
-        "[experimental] starts a new shell with the mise environment built from the current configuration"
+        "Starts a new shell with the mise environment built from the current configuration"
       ]
     },
     {
@@ -108,7 +108,7 @@
         "gen"
       ],
       "tip": [
-        "[experimental] Generate files for various tools/services"
+        "Generate files for various tools/services"
       ]
     },
     {
@@ -148,6 +148,12 @@
       ]
     },
     {
+      "name": "lock",
+      "tip": [
+        "Update lockfile checksums and URLs for all specified platforms"
+      ]
+    },
+    {
       "name": "ls",
       "alias": [
         "list"
@@ -163,6 +169,12 @@
       ]
     },
     {
+      "name": "mcp",
+      "tip": [
+        "[experimental] Run Model Context Protocol (MCP) server"
+      ]
+    },
+    {
       "name": "outdated",
       "tip": [
         "Shows outdated tool versions"
@@ -175,6 +187,15 @@
       ],
       "tip": [
         "Manage plugins"
+      ]
+    },
+    {
+      "name": "prepare",
+      "alias": [
+        "prep"
+      ],
+      "tip": [
+        "[experimental] Ensure project dependencies are ready"
       ]
     },
     {
@@ -205,6 +226,12 @@
       ]
     },
     {
+      "name": "search",
+      "tip": [
+        "Search for tools in the registry"
+      ]
+    },
+    {
       "name": "self-update",
       "tip": [
         "Updates mise itself"
@@ -232,6 +259,12 @@
       ]
     },
     {
+      "name": "shell-alias",
+      "tip": [
+        "Manage shell aliases"
+      ]
+    },
+    {
       "name": "sync",
       "tip": [
         "Synchronize tools from other version managers with mise"
@@ -256,6 +289,12 @@
       "name": "tool",
       "tip": [
         "Gets information about a tool"
+      ]
+    },
+    {
+      "name": "tool-stub",
+      "tip": [
+        "Execute a tool stub"
       ]
     },
     {
@@ -396,6 +435,39 @@
       "next": 0
     },
     {
+      "name": "-q",
+      "alias": [
+        "--quiet"
+      ],
+      "tip": [
+        "Suppress non-error messages"
+      ]
+    },
+    {
+      "name": "-v",
+      "alias": [
+        "--verbose"
+      ],
+      "tip": [
+        "Show extra output (use -vv for even more)"
+      ]
+    },
+    {
+      "name": "-y",
+      "alias": [
+        "--yes"
+      ],
+      "tip": [
+        "Answer yes to all confirmation prompts"
+      ]
+    },
+    {
+      "name": "--no-config",
+      "tip": [
+        "Do not load any config files"
+      ]
+    },
+    {
       "name": "--output",
       "tip": [
         "U: --output <OUTPUT>"
@@ -409,42 +481,15 @@
       ]
     },
     {
-      "name": "--no-config",
+      "name": "--locked",
       "tip": [
-        "Do not load any config files"
-      ]
-    },
-    {
-      "name": "-y",
-      "alias": [
-        "--yes"
-      ],
-      "tip": [
-        "Answer yes to all confirmation prompts"
-      ]
-    },
-    {
-      "name": "-q",
-      "alias": [
-        "--quiet"
-      ],
-      "tip": [
-        "Suppress non-error messages"
+        "Require lockfile URLs to be present during installation"
       ]
     },
     {
       "name": "--silent",
       "tip": [
         "Suppress all task output and mise non-error messages"
-      ]
-    },
-    {
-      "name": "-v",
-      "alias": [
-        "--verbose"
-      ],
-      "tip": [
-        "Show extra output (use -vv for even more)"
       ]
     }
   ]
