refactor(module): improve restart messages

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2212,7 +2212,7 @@
         "scoop update pscompletions\n"
       ],
       "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module...",
-      "restart": "<@Yellow>The change takes effect after restarting PowerShell and reimporting PSCompletions module.",
+      "restart": "<@Yellow>To make the change effective, please restart PowerShell and reimport PSCompletions module.",
       "too_many_completions": {
         "text": [
           "Too many items: {{ $count}}",
@@ -2480,7 +2480,7 @@
       "done": [
         "<@Green>PSCompletions's configuration modified successfully!\n",
         "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.wrap_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.wrap_whitespace($new_value) }}\n",
-        "<@Yellow>It may be necessary to restart PowerShell and re-import the PSCompletions module for the changes to take effect."
+        "<@Yellow>To make the change effective, may need restart PowerShell and reimport PSCompletions module."
       ],
       "err": {
         "one_or_zero": [
