--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2224,7 +2224,7 @@
         "scoop update pscompletions\n"
       ],
       "updating": "<@Cyan>尝试运行命令: <@Magenta>{{ $update_cmd }}<@Cyan>\nPSCompletions 模块正在尝试更新...",
-      "restart": "<@Yellow>请重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效",
+      "restart": "<@Yellow>为了让更改生效，请重启 PowerShell 并重新导入 PSCompletions 模块",
       "too_many_completions": {
         "text": [
           "补全项过多: {{ $count }}",
@@ -2492,7 +2492,7 @@
       "done": [
         "<@Green>PSCompletions 的配置修改成功!\n",
         "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.wrap_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.wrap_whitespace($new_value) }}\n",
-        "<@Yellow>可能需要重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效"
+        "<@Yellow>为了让更改生效，可能需要重启 PowerShell 并重新导入 PSCompletions 模块"
       ],
       "err": {
         "one_or_zero": [
